--- a/package.json
+++ b/package.json
@@ -2,19 +2,19 @@
   "name": "passport-azure-ad-login-oidc",
   "version": "0.0.1",
   "dependencies": {
-    "assert-plus": "*",
+    "assert-plus": "^1.0.0",
     "body-parser": "^1.15.2",
-    "bunyan": "*",
+    "bunyan": "^1.8.12",
     "connect-mongo": "^1.3.2",
     "cookie-parser": "^1.4.3",
-    "ejs": ">= 0.0.0",
-    "ejs-locals": ">= 0.0.0",
-    "express": "3.x",
+    "ejs": "^2.6.1",
+    "ejs-locals": "^1.0.2",
+    "express": "^3.21.2",
     "express-session": "^1.14.1",
     "method-override": "^2.3.6",
-    "mongoose": "^4.6.2",
-    "passport": "*",
-    "passport-azure-ad": "^3.0.6"
+    "mongoose": "^4.13.13",
+    "passport": "^0.4.0",
+    "passport-azure-ad": "^3.0.12",
+    "restify": "^7.2.0"
   }
 }
-
